make diagrams of through associations clearer

--- a/associations/index.html
+++ b/associations/index.html
@@ -1027,6 +1027,10 @@
                 <li>Ask each review for its product</li>
               </ol>
             </section>
+
+            <section>
+            <img src="through_colours.png" class="larger">
+            </section>
             
             <section>
               <h5>Many-to-Many</h5>
@@ -1056,6 +1060,14 @@
   end
                 </code>
               </pre>
+            </section>
+
+            <section>
+            <img src="through2_colours.png" class="larger">
+            </section>
+
+            <section>
+            <img src="through3_colours.png" class="larger">
             </section>
 
             <section>
