data modelling slides

--- a/data_modelling_day_1/index.html
+++ b/data_modelling_day_1/index.html
@@ -493,7 +493,7 @@
               <img src="one_to_many.png" class="larger">
             </section>
             <section>
-              <h3>"How many reviews for a single user? Just 1 or maybe more than 1?"</h3>
+              <h3>"How many reviews for <u>a single user</u>? Just 1 or maybe more than 1?"</h3>
               <img src="user_question_mark.png" class="">
             </section>
 
@@ -502,7 +502,7 @@
             </section>
 
             <section>
-              <h3>"How many users for a single review? Just 1 or maybe more than 1?"</h3>
+              <h3>"How many users for <u>a single review</u>? Just 1 or maybe more than 1?"</h3>
               <img src="review_question_mark.png" class="">
             </section>
 
@@ -872,7 +872,9 @@
           </section>
 
           <section data-background="#007aff">
+
             <section data-background="#007aff">
+              <h3>Identifying 1-Many Relationships in Your Data</h3>
               <ul>
                 <li>Are there multiple columns that always have to change together?</li>
                 <li>If the value for this column changes in one row, will it also have to change in other rows?</li>
