--- a/data_modelling_day_1/index.html
+++ b/data_modelling_day_1/index.html
@@ -936,6 +936,16 @@ SELECT * FROM reviews where product_id=3;
                   <tr><th>id</th><th>source</th><th>source_year</th><th>name</th><th>personality</th></tr>
 </table>
             </section>
+            <section>
+<p>Manager: "WALL-E is from the film WALL-E, not Star Wars"</p>
+                <table>
+                  <tr><th>id</th><th>source</th><th>source_year</th><th>name</th><th>personality</th></tr>
+                  <tr><td>1</td><td>Portal</td><td>2007</td><td>GLaDOS</td><td>passive-agressive</td></tr>
+                  <tr><td>4</td><td>Star Wars</td><td>1977</td><td>WALL-E</td><td>curious</td></tr>
+                  <tr><td>6</td><td>Ex Machina</td><td>2014</td><td>Ava</td><td>clever</td></tr>
+                  <tr><td>8</td><td>Star Wars</td><td>1977</td><td>R2D2</td><td>loyal</td></tr>
+                </table>
+            </section>
             <section data-background="#007aff">
                 <h5>Are there multiple columns that always have to change together?</h5>
                 <p>robots v1</p>
@@ -952,6 +962,16 @@ SELECT * FROM reviews where product_id=3;
                   <tr><th>id</th><th>source</th><th>source_year</th><th>name</th><th>personality</th></tr>
                   <tr><td>1</td><td>Portal</td><td>2007</td><td>GLaDOS</td><td>passive-agressive</td></tr>
                   <tr><td>4</td><td><b>WALL-E</b></td><td><b>2008</b></td><td>WALL-E</td><td>curious</td></tr>
+                  <tr><td>6</td><td>Ex Machina</td><td>2014</td><td>Ava</td><td>clever</td></tr>
+                  <tr><td>8</td><td>Star Wars</td><td>1977</td><td>R2D2</td><td>loyal</td></tr>
+                </table>
+            </section>
+            <section>
+<p>Manager: "Let's call it 'Star Wars series', not just 'Star Wars'"</p>
+                <table>
+                  <tr><th>id</th><th>source</th><th>source_year</th><th>name</th><th>personality</th></tr>
+                  <tr><td>1</td><td>Portal</td><td>2007</td><td>GLaDOS</td><td>passive-agressive</td></tr>
+                  <tr><td>4</td><td>Star Wars</td><td>1977</td><td>C3PO</td><td>anxious</td></tr>
                   <tr><td>6</td><td>Ex Machina</td><td>2014</td><td>Ava</td><td>clever</td></tr>
                   <tr><td>8</td><td>Star Wars</td><td>1977</td><td>R2D2</td><td>loyal</td></tr>
                 </table>
