--- a/data_modelling_day_1/index.html
+++ b/data_modelling_day_1/index.html
@@ -1010,11 +1010,11 @@ SELECT * FROM reviews where product_id=3;
 
                 <p>sources</p>
                 <table>
-                  <tr><th>id</th><th>title</th><th>medium</th><th>year</th></tr>
-                  <tr><td>100</td><td>WALL-E</td><td>film</td><td>2008</td></tr>
-                  <tr><td>101</td><td>Star Wars</td><td>film series</td><td>1977</td></tr>
-                  <tr><td>...</td><td>...</td><td>...</td><td>...</td></tr>
-                  <tr><td>200</td><td>Portal</td><td>video game series</td><td>2007</td></tr>
+                  <tr><th>id</th><th>title</th><th>year</th></tr>
+                  <tr><td>100</td><td>WALL-E</td><td>2008</td></tr>
+                  <tr><td>101</td><td>Star Wars</td><td>1977</td></tr>
+                  <tr><td>...</td><td>...</td><td>...</td></tr>
+                  <tr><td>200</td><td>Portal</td><td>2007</td></tr>
                 </table>
               </div>
             </section>
@@ -1082,12 +1082,10 @@ SELECT * FROM robots where source_id=100;
 
                 <p>categories</p>
                 <table>
-                  <tr><th>id</th><th>name</th><th>description</th></tr>
-                  <tr><td>222</td><td>Party</td><td>A game that is designed for large groups of people and emphasizes social interaction, creativity, and/or volubility.</td></tr>
-                  <tr><td>...</td><td>...</td><td>...</td></tr>
-                  <tr><td>300</td><td>Abstract</td><td>In abstract strategy games, players know the entire game state at all times, and random generators such as dice are not used.
-                  
-                  </td></tr>
+                  <tr><th>id</th><th>name</th></tr>
+                  <tr><td>222</td><td>Party</td></tr>
+                  <tr><td>...</td><td>...</td></tr>
+                  <tr><td>300</td><td>Abstract</td></tr>
                 </table>
               </div>
             </section>
